# diavlo-player

./: .gitignore  Cargo.toml  IDENTITY.md  README.md  USER.md
.openclaw/: workspace-state.json
docs/: DEPENDENCY_AUDIT.md  FORMAT_SUPPORT.md  PERFORMANCE.md  UI_RENDERER_BENCHMARK.md
installer/: diavlo_player_setup.iss
src/: errors.rs  lib.rs  main.rs
src/audio/: decoder.rs  engine.rs  mod.rs  resampler.rs
src/platform/: mod.rs  registry.rs  single_instance.rs  windows.rs
tests/: decoder_test.rs  format_matrix_test.rs  pipeline_test.rs
tests/fixtures/: test.alac.m4a  test.flac  test.m4a  test.opus
ui/: app-window.slint
